# place_net

./: .gitignore  LICENSE  README.md  setup.py  train_model.py
base_net/: README.md  cli.py  setup.py  train_model.py
base_net/base_net/: cli.py
base_net/base_net/config/: laptop.yaml  server.yaml
base_net/base_net/models/: base_net.py  basenet_dataset.py  loss.py  pointcloud_encoder.py  pose_encoder.py  pose_validity_checker.py
base_net/base_net/samples/: config.yaml  spot.xrdf
base_net/base_net/scripts/: calculate_ground_truth.py  generate_inverse_reachability_map.py  generate_task_poses.py  train_model.py
base_net/base_net/utils/: base_net_config.py  estimate_pointcloud_normals.py  geometry.py  invert_robot_model.py  (+6 more)
base_net/config/: laptop.yaml  server.yaml  task_definitions.yaml
base_net/docker/: Dockerfile  curobo-docker-compose.yaml  curobo.Dockerfile  docker-compose.yaml  jetson-curobo.Dockerfile
base_net/models/: base_net.py  basenet_dataset.py  loss.py  pointcloud_encoder.py  pose_encoder.py  pose_validity_checker.py
base_net/scripts/: calculate_ground_truth.py  generate_inverse_reachability_map.py  generate_task_poses.py  train_model.py
base_net/utils/: base_net_config.py  estimate_pointcloud_normals.py  geometry.py  inverse_reachability_map.py  invert_robot_model.py  logger.py  pointcloud_region.py  pose_scorer.py  republish_pointcloud_with_normals.py  task_visualization.py
base_net_msgs/: CMakeLists.txt  package.xml
base_net_msgs/srv/: QueryBaseLocation.srv  QueryReachablePoses.srv  QueryReachablePosesGT.srv
base_net_ros/: package.xml  setup.cfg  setup.py
base_net_ros/base_net_ros/: base_net_conversions.py  base_net_params.yaml  base_net_server.py  base_net_visualizer.py
base_net_ros/rviz/: base_net_ros.rviz
config/: task_definitions.yaml
docker/: Dockerfile  curobo.Dockerfile  docker-compose.yaml
models/: base_net.py  pointcloud_encoder.py  pose_encoder.py
scripts/: calculate_ground_truth.py  generate_task_poses.py  invert_robot_model.py  task_visualization.py
test_data/: tasks.txt
(+5 files in other folders)
