<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_net_msgs</name>
  <version>1.0.0</version>
  <description>ROS interfaces for the base_net ROS2 package.</description>

  <maintainer email="alexnavtt@utexas.edu">Blake Anderson</maintainer>
  <author email="alexnavtt@utexas.edu">Blake Anderson</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
