<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_net_ros</name>
  <version>1.0.0</version>
  <description>A ROS2 interface for the base_net package</description>
  <maintainer email="alexnavtt@utexas.edu">alex</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>base_net_msgs</exec_depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
